Optimize queries with distinct aggregations over different columns, no GROUP BY