@@ -23,7 +23,10 @@ package io.crate.planner.optimizer.rule;
 
 import static io.crate.planner.optimizer.matcher.Pattern.typeOf;
 
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import io.crate.execution.engine.aggregation.impl.CountAggregation;
@@ -32,12 +35,17 @@ import io.crate.expression.symbol.Function;
 import io.crate.expression.symbol.Literal;
 import io.crate.expression.symbol.Symbol;
 import io.crate.metadata.Reference;
+import io.crate.planner.operators.Eval;
 import io.crate.planner.operators.GroupHashAggregate;
 import io.crate.planner.operators.HashAggregate;
+import io.crate.planner.operators.JoinPlan;
 import io.crate.planner.operators.LogicalPlan;
 import io.crate.planner.optimizer.Rule;
 import io.crate.planner.optimizer.matcher.Captures;
 import io.crate.planner.optimizer.matcher.Pattern;
+import io.crate.sql.tree.JoinType;
+import io.crate.statistics.ColumnStats;
+import io.crate.statistics.Stats;
 
 /// Deduplicates the argument of a global `agg(DISTINCT col)` with a keys-only `GROUP BY`, so the
 /// aggregate runs over the distinct values instead of over every row. Same result as
@@ -49,12 +57,48 @@ import io.crate.planner.optimizer.matcher.Pattern;
 ///                                               └ Collect[doc.t | [b] | true]
 /// ```
 ///
-/// The rule applies if all aggregation functions have the same argument.
-///
-/// The `distinct` flag stays in the function, because an optimization mustn't change the outputs of an operator.
+///  The `distinct` flag stays in the function, because an optimization mustn't change the outputs of an operator.
 ///
 /// However, we set a flag in the `HashAggregate`, so that it doesn't use the default implementation of `distinct`
-/// (the replacement with `collection_agg(collect_set(x))`).
+/// (i.e., the replacement with `collection_agg(collect_set(x))`).
+///
+/// If there are global `DISTINCT` aggregates over *different* columns, then the rule returns a cross [JoinPlan].
+/// Each side of the cross join is a `HashAggregate`, so this rule can deduplicate each branch on
+/// its own `GROUP BY`, on a later optimizer iteration.
+///
+/// For example:
+///
+/// ```
+/// SELECT count(DISTINCT a), count(DISTINCT b) FROM t
+/// ```
+///
+/// ```
+/// HashAggregate[count(DISTINCT a), count(DISTINCT b)]
+///   └ Collect[doc.t | [a, b] | true]
+/// ```
+///
+/// becomes
+///
+/// ```
+/// Eval[count(DISTINCT a), count(DISTINCT b)]
+///   └ Join[CROSS]
+///       ├ HashAggregate[count(DISTINCT a)]
+///       │    └ Collect[doc.t | [a, b] | true]
+///       └ HashAggregate[count(DISTINCT b)]
+///            └ Collect[doc.t | [a, b] | true]
+/// ```
+///
+/// Each branch reuses the same source, so `WHERE` (baked into that source) applies to every
+/// branch unchanged.
+///
+/// The split doesn't happen if 2 or more of the columns are high-cardinality (per table stats):
+/// the dedup `GROUP BY` on a high-cardinality branch barely shrinks the row count, so the extra
+/// cross join wouldn't pay for itself. Missing stats aren't treated as high-cardinality.
+///
+/// If there's a parent `Filter`: The `Filter` references the original `Function` outputs.
+/// However, the join groups the outputs by column (one side per column), which means that
+/// the `Filter`'s references become invalid. For this reason, an [Eval] is added on top of
+/// the `JoinPlan` to keep the same order.
 public final class RewriteDistinctAggToGroupBy implements Rule<HashAggregate> {
     /// Generally, the rule doesn't care about which aggregate functions are present.
     /// However, the default implementation of distinct functions is limited to the ones below
@@ -66,37 +110,31 @@ public final class RewriteDistinctAggToGroupBy implements Rule<HashAggregate> {
         AverageAggregation.NAMES[1]
     );
 
+    /// Above this fraction of distinct values per row, a column counts as high-cardinality.
+    private static final double HIGH_CARDINALITY_RATIO = 0.85;
+
     private final Pattern<HashAggregate> pattern;
 
     public RewriteDistinctAggToGroupBy() {
         this.pattern = typeOf(HashAggregate.class)
-            .with(this::allAggregatesDistinctOnSameSingleColumn);
+            .with(RewriteDistinctAggToGroupBy::matches);
     }
 
-    /// Currently, we only optimize aggregate operators where every function is over the same column,
-    /// so we can use one sub-query with "group by".
-    private boolean allAggregatesDistinctOnSameSingleColumn(HashAggregate agg) {
-        List<Function> aggregates = agg.aggregates();
-        if (aggregates.get(0).arguments().isEmpty()) {
-            return false;
-        }
-
-        if (!(aggregates.get(0).arguments().get(0) instanceof Reference column)) {
-            return false;
-        }
-
-        return aggregates.stream().allMatch(fn ->
-            fn.distinct() &&
-                !hasFilter(fn) &&
-                SUPPORTED_AGGREGATES.contains(fn.name()) &&
-                // NB: distinct functions can have one and only one argument
-                fn.arguments().get(0).equals(column)
-        );
+    private static boolean matches(HashAggregate agg) {
+        return agg.aggregates().stream()
+            .allMatch(fn ->
+                fn.distinct() &&
+                    hasNoFilter(fn) &&
+                    SUPPORTED_AGGREGATES.contains(fn.name()) &&
+                    // NB: distinct functions can have one and only one argument
+                    !fn.arguments().isEmpty() &&
+                    fn.arguments().getFirst() instanceof Reference
+            );
     }
 
-    private static boolean hasFilter(Function aggregate) {
+    private static boolean hasNoFilter(Function aggregate) {
         Symbol filter = aggregate.filter();
-        return filter != null && !filter.equals(Literal.BOOLEAN_TRUE);
+        return filter == null || filter.equals(Literal.BOOLEAN_TRUE);
     }
 
     @Override
@@ -106,12 +144,28 @@ public final class RewriteDistinctAggToGroupBy implements Rule<HashAggregate> {
 
     @Override
     public LogicalPlan apply(HashAggregate aggregate, Captures captures, Rule.Context context) {
+        if (groupByColumn(aggregate.aggregates()).size() == 1) {
+            return applyToSameColumn(aggregate, context);
+        }
+        return applyToDifferentColumns(aggregate, context);
+    }
+
+    /// Groups `aggregates` by their input columns.
+    private static Map<Symbol, List<Function>> groupByColumn(List<Function> aggregates) {
+        Map<Symbol, List<Function>> byColumn = new LinkedHashMap<>();
+        for (Function fn : aggregates) {
+            byColumn.computeIfAbsent(fn.arguments().getFirst(), k -> new ArrayList<>()).add(fn);
+        }
+        return byColumn;
+    }
+
+    private static LogicalPlan applyToSameColumn(HashAggregate aggregate, Rule.Context context) {
         Function distinctAggregate = aggregate.aggregates().getFirst();
         Symbol groupKey = distinctAggregate.arguments().getFirst();
         LogicalPlan source = aggregate.sources().getFirst();
 
         LogicalPlan resolvedSource = context.resolvePlan().apply(source);
-        if (groupByPresent(resolvedSource, groupKey)) {
+        if (isGroupHashAgg(resolvedSource, groupKey)) {
             return null;
         }
 
@@ -125,9 +179,50 @@ public final class RewriteDistinctAggToGroupBy implements Rule<HashAggregate> {
     ///
     /// This is also what terminates the rule. This rule keeps the `distinct` flag in functions, so its result
     /// matches the pattern again. This method recognizes the `GROUP BY` that was inserted.
-    private static boolean groupByPresent(LogicalPlan plan, Symbol groupKey) {
+    private static boolean isGroupHashAgg(LogicalPlan plan, Symbol groupKey) {
         return plan instanceof GroupHashAggregate groupBy
             && groupBy.aggregates().isEmpty()
             && groupBy.groupKeys().equals(List.of(groupKey));
+    }
+
+    private static LogicalPlan applyToDifferentColumns(HashAggregate aggregate, Rule.Context context) {
+        LogicalPlan source = aggregate.sources().getFirst();
+        Map<Symbol, List<Function>> byColumn = groupByColumn(aggregate.aggregates());
+
+        Stats sourceStats = context.planStats().get(source);
+        long highCardinalityColumns = byColumn.keySet().stream()
+            .filter(column -> isHighCardinality(sourceStats, column))
+            .count();
+        if (highCardinalityColumns > 1) {
+            // Each column results in a full scan. Our benchmarks showed that
+            // (at the time of writing this), the rule makes a query with 2
+            // high-cardinality (~100%) columns actually slower (23% higher query time).
+            return null;
+        }
+
+        LogicalPlan joined = null;
+        for (List<Function> columnAggregates : byColumn.values()) {
+            LogicalPlan branch = new HashAggregate(source, columnAggregates);
+            joined = joined == null ? branch : new JoinPlan(joined, branch, JoinType.CROSS, null);
+        }
+
+        return Eval.create(joined, List.copyOf(aggregate.aggregates()));
+    }
+
+    /// True if `column`'s distinct-value ratio exceeds [#HIGH_CARDINALITY_RATIO],
+    /// or when stats are missing (no `ANALYZE`, or zero rows).
+    /// This is because a high-cardinality column may increase the query time a lot (in some benchmarks 25-50%).
+    private static boolean isHighCardinality(Stats stats, Symbol column) {
+        assert column instanceof Reference : "RewriteDistinctAggToGroupBy can be applied for references only";
+        Reference ref = (Reference) column;
+        if (stats.numDocs() <= 0) {
+            return true;
+        }
+        ColumnStats<?> columnStats = stats.getColumnStats(ref.column());
+        if (columnStats == null) {
+            return true;
+        }
+
+        return columnStats.approxDistinct() / (double) stats.numDocs() > HIGH_CARDINALITY_RATIO;
     }
 }
